--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forwardworx - AI-Powered Business Enablement</title>
+    <title>Forwardworkx - AI-Powered Business Enablement</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       /* Custom font import if needed */
